# Labs-Cpp

./: CMakeLists.txt  Main.cpp  Main.h  Price.cpp
src/Lab1/class/: Main.cpp  Price.cpp  Price.h
src/Lab1/struct/: Main.cpp  Price.cpp  Price.h  ddd.cpp
src/Lab2/: Main.cpp  Product.cpp  Thing.cpp
src/Lab3/: main.cpp
src/Lab4/: main.cpp
src/Lab5/: main.cpp
src/Lab6/: main.cpp
src/Lab7/: main.cpp
src/Lab8/Task1/: main.cpp  result.txt
src/Lab8/Task2/: main.cpp
